# qr_benchmark

./: .gitignore  Cargo.toml  LICENSE  README.md  debug_data.py  debug_decoded.py  debug_incorrect.py  debug_output.json  debug_status.py  debug_viz.py  raw_measurements.csv  summary_stats.csv  viz.py
examples/: custom_decoder.rs
src/: benchmark.rs  data.rs  decoders.rs  lib.rs  main.rs  viz.rs
