[package]
name = "qr_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# Decoders
rxing = "0.5" # Rust port of ZXing
rqrr = "0.8" # Pure Rust Quirc
bardecoder = "0.5" # Pure Rust decoder
qr_code = "2.0" # Basic decoding support

# Utilities
image = "0.24"
walkdir = "2.5"
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"

# Visualization
plotters = "0.3.7"
