[package]
name = "qr_benchmark"
version = "0.1.0"
edition = "2021"

[features]
default = ["rxing", "rqrr", "bardecoder", "zbar"]
rxing = ["dep:rxing"]
rqrr = ["dep:rqrr"]
bardecoder = ["dep:bardecoder"]
zbar = ["dep:zbar-pack"]

[dependencies]
# Decoders
rxing = { version = "0.5", optional = true }
rqrr = { version = "0.8", optional = true }
bardecoder = { version = "0.5", optional = true }
zbar-pack = { version = "0.1.5", optional = true }

# Utilities
image = "0.24"
walkdir = "2.5"
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }

# Visualization
plotters = "0.3.7"
serde_json = "1.0"
